remove a Java deprecation warning